# learn_rust

./: Cargo.toml  hello.txt
20220129_grep/grep/: input_file.txt
20220129_grep/grep/src/: lib.rs  main.rs
20220131_release/profile/: Cargo.toml
20220131_release/profile/src/: main.rs
20220202_mq/tonic_example/: Cargo.toml  build.rs
20220202_mq/tonic_example/proto/: rust_mq.proto
20220202_mq/tonic_example/src/: client.rs  server.rs
notes/: day_00_ownership.md  day_01_array.md
src/: day_20220128_test.rs  lib.rs
tests/: shape_test.rs
tests/common/: mod.rs
