[package]
name = "tonic_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the HelloWorld gRPC server
name = "rust-mq-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "rust-mq-client"
path = "src/client.rs"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.6"